--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-rating",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Simple Rating is rating component is based on font-awesome icons for VueJS",
   "main": "src/SimpleRating.vue",
   "scripts": {
@@ -9,7 +9,10 @@
   "peerDependencies": {
     "vue": ">=2.0.0-beta.0"
   },
-  "repository":"git+https://github.com/kaankilic/simple-rating.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kaankilic/simple-rating.git"
+  },
   "keywords": [
     "vue",
     "rating",
@@ -17,7 +20,12 @@
   ],
   "author": "Kaan Kilic <bl4cksta@gmail.com>",
   "license": "MIT",
-  "dependencies":{
-    "font-awesome":"^4.0.0"
-  }
+  "dependencies": {
+    "font-awesome": "^4.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/kaankilic/simple-rating/issues"
+  },
+  "homepage": "https://github.com/kaankilic/simple-rating#readme",
+  "devDependencies": {}
 }
